--- a/config.py.sample
+++ b/config.py.sample
@@ -1,5 +1,5 @@
 #bot token for @BotFather
-BOT_TOEKN = '399085384:AAG9snEXFzMwwgt6E2ZJiHrucBjrWkfFIeE'
+BOT_TOEKN = ''
 
 #usernames who have access to admin commands
-ADMIN_USERNAMES = ['shaahinrmz', 'hsnfirooz']
+ADMIN_USERNAMES = ['', '']
